[Skip CI] fixed dev docs navigation

--- a/docs/developer/contributing/developing-spree.mdx
+++ b/docs/developer/contributing/developing-spree.mdx
@@ -4,11 +4,11 @@ description: >-
   code. We're happy you're here!
 ---
 
-# Developing Spree
-
 ## Spree codebase
 
 Spree API is written in Ruby on Rails framework and is mounted into a Rails application as [a Rails Engine](https://guides.rubyonrails.org/engines.html).
+
+Each of spree components (eg. Storefront) is distributed as a separate gem, eg. `spree_storefront`, inside a subdirectory of the `spree` directory, eg. `spree/storefront`.
 
 ### Spree namespace
 
