--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -16,42 +16,93 @@ Welcome to the Spree Commerce [open-source eCommerce](https://github.com/spree/s
 ### 1. Installing Spree
 
 <AccordionGroup>
-  <Accordion icon="github" title="Creating Your Spree Repository">
-    To create your Spree store repository please, follow these instructions:
+  <Accordion icon="github" title="Getting the Spree Starter template">
+    <Info>
+      Spree Starter is a pre-configured Rails application that comes with Spree Commerce and some other useful gems installed. It is highly recommended to use Spree Starter to get started with Spree Commerce.
+    </Info>
 
-    [Use Spree starter template](https://github.com/new?template_name=spree_starter\&template_owner=spree) to create your own repository
-  </Accordion>
-
-  <Accordion icon="rectangle-terminal" title="Setting up Your Development Environment">
     <Note>
       If you're on Windows remember to [install the Linux subsystem](https://docs.microsoft.com/en-us/windows/wsl/install-win10) before proceeding.
     </Note>
 
-    1. Install [git](https://github.com/git-guides/install-git), [Ruby](https://www.ruby-lang.org/en/documentation/installation) and [Docker Desktop](https://docs.docker.com/get-docker)
+    1. Install [git](https://github.com/git-guides/install-git) if you don't have it already.
 
-    2. Once git is installed, clone your docs repository using
+    2. Clone the Spree starter template:
 
-       ```basgh
-       git clone <your-repo>
-       ```
+        ```bash
+        git clone https://github.com/spree/spree_starter.git
+        ```
 
-           <Info>
-             If you haven't set it up yet, now would be a good time to do so with these [SSH keys](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)
-           </Info>
+    3. Go to the repository directory:
 
-    3. Open a terminal and go to the repository directory
+        ```bash
+        cd spree_starter
+        ```      
 
-    4. Run setup commands:
+  </Accordion>
+
+  <Accordion icon="rectangle-terminal" title="Setting up Your Development Environment">
+    Now that you have the Spree Starter template, you can start setting up your development environment.
+  
+    1. Install required dependencies
+
+        On MacOS you can install the dependencies using [Homebrew package manager](https://brew.sh/):
+
+        ```bash
+        brew install vips libpq
+        ```
+
+        On debian-based systems you can install the dependencies using the package manager:
+
+        ```bash
+        sudo apt-get install libvips-dev libpq-dev
+        ```
+
+    2. Install Ruby
+
+        Spree is based on [Ruby and Rails](https://rubyonrails.org/), hence you need to install Ruby language.
+
+        Install [rbenv (ruby version manager)](https://github.com/rbenv/rbenv):
+
+        ```bash
+        curl -fsSL https://rbenv.org/install.sh | bash
+        ```
+
+        And now install Ruby 3.3:
+
+        ```bash
+        rbenv init && rbenv install && rbenv global 3.3.0
+        ```
+
+    3. Install [Docker Desktop](https://docs.docker.com/get-docker)
+
+    4. Start Docker Compose services:
+
+        <Info>
+          Docker needs to be running before running the setup commands.
+        </Info>
+
+        ```bash
+        docker compose up -d
+        ```
+
+        This will start the PostgreSQL database which is required for Spree to work. You can also use other databases like MySQL.
+
+    5. Run setup commands:
 
        ```bash
        bin/setup
        ```
 
-    5. And finally start the development server with:
+        This will install the necessary gems, run the database migrations and seed the database with some sample data.
+
+    6. And finally start the development server with:
 
        ```bash
-       bin/rails s
+       bin/rails dev
        ```
+
+        This will start the development server on [http://localhost:3000](http://localhost:3000).
   </Accordion>
 
   <Accordion icon="box" title="Adding sample data">
@@ -79,7 +130,7 @@ Feel free to explore your store. You can do so because Spree comes with a defaul
 
     Upon successful authentication, you should see the admin screen:
 
-    ![](/images/admin_panel_978-2x.jpg)
+    ![](https://vendo-production-res.cloudinary.com/image/upload/v1740668008/docs/admin_dashboard.png)
 
     Feel free to explore some of the Admin Panel features that Spree has to offer and to verify that your installation is working properly.
   </Accordion>
@@ -87,7 +138,7 @@ Feel free to explore your store. You can do so because Spree comes with a defaul
   <Accordion icon="palette" title="Browsing Storefront">
     Spree comes with a default pre-built Storefront. You can access it by navigating to [http://localhost:3000](http://localhost:3000).
 
-    You can later customize this Storefront or choose another one if you prefer Next.js or Vue.js.
+    You can learn more about Storefront configuration in the [Storefront](/user/storefront/theme-editor) section.
   </Accordion>
 </AccordionGroup>
 
