Fixed https://github.com/spree/spree/issues/12474 quickstart docs

--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -99,7 +99,7 @@ Welcome to the Spree Commerce [open-source eCommerce](https://github.com/spree/s
     6. And finally start the development server with:
 
        ```bash
-       bin/rails dev
+       bin/dev
        ```
 
         This will start the development server on [http://localhost:3000](http://localhost:3000).
