--- a/docs/developer/contributing/developing-spree.mdx
+++ b/docs/developer/contributing/developing-spree.mdx
@@ -1,4 +1,5 @@
 ---
+title: Developing Spree
 description: >-
   This guide covers all the necessary steps to contributing to Spree source
   code. We're happy you're here!
@@ -6,7 +7,7 @@ description: >-
 
 ## Spree codebase
 
-Spree API is written in Ruby on Rails framework and is mounted into a Rails application as [a Rails Engine](https://guides.rubyonrails.org/engines.html).
+Spree is written in Ruby on Rails framework and is mounted into a Rails application as [a Rails Engine](https://guides.rubyonrails.org/engines.html).
 
 Each of spree components (eg. Storefront) is distributed as a separate gem, eg. `spree_storefront`, inside a subdirectory of the `spree` directory, eg. `spree/storefront`.
 
@@ -75,20 +76,28 @@ bin/sandbox.sh
 By default, Sandbox uses the **SQLite** database. But you can switch to **PostgreSQL** or **MySQL**:
 
 ```bash
-DB=postgres bin/sandbox.sh
+DB=postgres DB_PASSWORD=password DB_USERNAME=postgres DB_HOST=localhost bin/sandbox.sh
 ```
 
 We recommend sticking to SQLite for development purposes as it doesn't require any additional setup.
 
 ## Running the application
 
-You can run the application using the following command:
+Go to the `sandbox` directory:
 
 ```bash
-cd sandbox && bin/dev
+cd sandbox
 ```
 
-This will start the web server, you can access the application at [http://localhost:3000](http://localhost:3000).
+And run the application using the following command:
+
+```bash
+bin/dev
+```
+
+This will start the web server and all the necessary processes (such as Tailwind CSS compiler).
+
+You can access the application at [http://localhost:3000](http://localhost:3000).
 
 To access the Admin Panel, you can go to [http://localhost:3000/admin](http://localhost:3000/admin).
 
