--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1627,6 +1627,7 @@ en:
     reference: Reference
     reference_contains: Reference Contains
     refund: Refund
+    refund_amount: Refund Amount
     refund_amount_must_be_greater_than_zero: Refund amount must be greater than zero
     refund_reasons: Refund Reasons
     refunded_amount: Refunded Amount
@@ -1656,6 +1657,7 @@ en:
     reimbursement_types: Reimbursement Types
     reimbursements: Reimbursements
     reject: Reject
+    reject_reason: Reject Reason
     rejected: Rejected
     remember_me: Remember me
     remove: Remove
