Admin: Improve Dashboard page
Use translations, avoid N+1s, better UX

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -47,6 +47,8 @@ en:
           description: Everything you need to set up to start selling.
         hi: Hi
         whats_happening_on: Here's what's happening on <strong>%{store_name}</strong> today.
+        top_products: Top products
+        view_report: View report
       display_on_options:
         back_end: Only on admin panel
         both: On both admin panel & storefront
